--- a/components/docs_menu.html
+++ b/components/docs_menu.html
@@ -3,15 +3,14 @@
   {% set page = include_dict.page %}
   {% for section in site.data.toc.sections %}
     {% if section.type == "collection" %}
-      {% set section_pages = getPages(section.path) | sort(false, true, "nav_order") %}
-      {% set first_page = section_pages[0] %}
-      <li class="toc-item has-children">
-        <a href="{{ first_page.url | relative_url }}">{{ section.title }}</a>
-        <button class="submenu-toggle"><span class="screen-reader-text">Submenu</span><span class="icon-angle-right" aria-hidden="true"></span></button>
-        <ul class="toc-submenu">
+      <li class="toc-item has-children{% if page.url == section.path %} current{% endif %}">
+        <a href="{{ section.path | relative_url }}">{{ section.title }}</a>
+        {% set section_pages = getPages(section.path) | where("nav_order") | sort(false, true, "nav_order") %}
+        {% if section_pages | length > 0 %}
+          <button class="submenu-toggle"><span class="screen-reader-text">Submenu</span><span class="icon-angle-right" aria-hidden="true"></span></button>
           {% set include_dict = {"section_pages": section_pages, "page": page, "site": site} %}
-          {% include "docs_subnav.html" %}
-        </ul>
+          {% include "docs_submenu.html" %}
+        {% endif %}
       </li>
     {% else %}
       <li class="toc-item{% if page.url == getPage(section.path).url %} current{% endif %}"><a
