--- a/components/header.html
+++ b/components/header.html
@@ -19,20 +19,9 @@
       <nav id="main-navigation" class="site-navigation" aria-label="Main Navigation">
         <div class="site-nav-inside">
           <button id="menu-close" class="menu-toggle"><span class="screen-reader-text">Open Menu</span><span class="icon-close" aria-hidden="true"></span></button>
-          <ul class="menu">
-            {% for item in site.menus.main %}
-            <li class="menu-item {% if page.url == item.url %} current-menu-item{% endif %}">
-              <a href="{{ item.url | relative_url }}">{{ item.title }}</a>
-            </li>
-            {% endfor %}
-            {% if site.params.header.menu.actions %}
-              {% for action in site.params.header.menu.actions %}
-              <li class="menu-item">
-                <a href="{{ action.url | relative_url }}">{{ action.label }}</a>
-              </li>
-              {% endfor %}
-            {% endif %}
-          </ul><!-- .menu -->
+          {% set menu = site.menus.main %}
+          {% set include_dict = {"menu": menu, "page": page} %}
+          {% include "menu.html" %}
         </div><!-- .site-nav-inside -->
       </nav><!-- .site-navigation -->
       <button id="menu-open" class="menu-toggle"><span class="screen-reader-text">Close Menu</span><span class="icon-menu" aria-hidden="true"></span></button>
