--- a/sass/imports/_docs.scss
+++ b/sass/imports/_docs.scss
@@ -161,6 +161,7 @@
     padding-right: 30px;
     position: relative;
   
+    &.current,
     &.active {
       .toc-submenu {
         display: block;
