--- a/templates/docs.html
+++ b/templates/docs.html
@@ -2,49 +2,35 @@
 
 {% block content %}
 
-  <header class="page-header bg-gradient outer">
-    {% if page.params.img_path %}
-    <div class="bg-img" style="background-image: url('{{ page.params.img_path | relative_url }}')"></div>
-    {% endif %}
-    <div class="inner-small">
-      <h1 class="page-title">{{ page.params.title }}</h1>
-      {% if page.params.subtitle %}
-      <p class="page-subtitle">{{ page.params.subtitle }}</p>
-      {% endif %}
-    </div><!-- .inner-small -->
-  </header><!--.page-header -->
-
-  <div class="block docs-block outer">
+  <div class="outer">
     <div class="inner">
-      <div class="block-items">
-        {% for section in site.data.toc.sections %}
-        <section class="block-item">
-          <div class="block-item-inside">
-            {% if section.type == "collection" %}
-              {% set section_pages = getPages(section.path) | sort(false, true, "nav_order") %}
-              {% set first_page = section_pages[0] %}
-              <h2 class="block-item-title line-left"><a href="{{ first_page.url | relative_url }}">{{ section.title }}</a></h2>
-              {% if section.subtitle %}
-              <p class="block-item-text">{{ section.subtitle | safe }}</p>
-              <p class="block-item-cta"><a href="{{ first_page.url | relative_url }}">Learn More <span class="icon-arrow-right" aria-hidden="true"></span></a></p>
-              {% endif %}
-            {% else %}
-              <h2 class="block-item-title"><a href="{{ getPage(section.path).url | relative_url }}">{{ section.title }}</a></h2>
-              {% if section.subtitle %}
-              <p class="block-item-text">{{ section.subtitle | safe }}</p>
-              <p class="block-item-cta"><a href="{{ getPage(section.path).url | relative_url }}">Learn More <span class="icon-arrow-right" aria-hidden="true"></span></a></p>
-              {% endif %}
-            {% endif %}
-          </div><!-- .block-item-inside -->
-        </section><!-- .block-item -->
-        {% endfor %}
-      </div><!-- .block-items -->
-    </div><!-- .inner -->
-  </div><!-- .docs-block -->
-
-  {% for section in page.params.sections %}
-    {% set include_dict = {'section': section, 'site': site} %}
-    {% include section.component %}
-  {% endfor %}
+      <div class="docs-content">
+        <nav id="docs-nav" class="docs-nav">
+          <div id="docs-nav-inside" class="docs-nav-inside sticky">
+            <button id="docs-nav-toggle" class="docs-nav-toggle">Navigate Docs<span class="icon-angle-right" aria-hidden="true"></span></button>
+            <div class="docs-toc-wrap">
+              {% set include_dict = {"page": page, "site": site} %}
+              {% include "docs_menu.html" %}
+            </div><!-- .docs-toc-wrap -->
+          </div><!-- .docs-nav-inside -->
+        </nav><!-- .docs-nav -->
+        <article class="post type-docs">
+          <div class="post-inside">
+            <header class="post-header">
+              <h1 class="post-title line-left">{{ page.params.title }}</h1>
+            </header><!-- .post-header -->
+            <div class="post-content">
+              {{ page.content }}
+            </div><!-- .post-content -->
+          </div><!-- .post-inside -->
+        </article><!-- .post -->
+        <nav id="page-nav" class="page-nav">
+          <div id="page-nav-inside" class="page-nav-inside sticky">
+            <h2 class="page-nav-title">Jump to Section</h2>
+          </div><!-- .page-nav-inside -->
+        </nav><!-- .page-nav -->
+      </div><!-- .docs-content -->
+    </div><!-- .inner-->
+  </div><!-- .outer -->
 
 {% endblock %}
