--- a/components/hero_block.html
+++ b/components/hero_block.html
@@ -2,7 +2,7 @@
   {% if include_dict.section.image %}
   <div class="bg-img" style="background-image: url('{{ include_dict.section.image | relative_url }}')"></div>
   {% endif %}
-  <div class="inner-medium">
+  <div class="inner-small">
     <div class="block-inside">
       <div class="block-content">
         <h2 class="block-title">{{ include_dict.section.title }}</h2>
