--- a/sass/imports/_icons.scss
+++ b/sass/imports/_icons.scss
@@ -172,3 +172,12 @@
     width: 12px;
   }
 }
+
+.docs-section-item {
+  .icon-angle-right {
+    left: auto;
+    margin-left: 0;
+    margin-right: 15px;
+    right: 0;
+  }
+}
