--- a/templates/overview.html
+++ b/templates/overview.html
@@ -14,10 +14,10 @@
     </div><!-- .inner-small -->
   </header><!--.page-header -->
 
-  <div class="block docs-block outer">
+  <div class="docs-block outer">
     <div class="inner">
       <div class="block-items">
-        {% for section in site.data.toc.sections %}
+        {% for section in site.data.docs_toc.sections %}
         <section class="block-item">
           <div class="block-item-inside">
             {% if section.type == "collection" %}
