--- a/templates/showcase.html
+++ b/templates/showcase.html
@@ -14,7 +14,7 @@
     </div><!-- .inner-small -->
   </header><!--.page-header -->
 
-  <div class="block showcase-block outer">
+  <div class="showcase-block outer">
     <div class="inner">
       <div class="block-items">
         {% for item in page.params.items %}
