--- a/components/footer.html
+++ b/components/footer.html
@@ -2,14 +2,14 @@
   <div class="inner">
     <div class="site-footer-inside">
       <p class="site-info">
-        {{ site.params.footer.content | safe }}
+        {{ site.data.footer.content | safe }}
         &nbsp;
-        {% for link in site.params.footer.links %}
+        {% for link in site.data.footer.links %}
         <a href="{{ link.url }}" {% if link.new_window %}target="_blank" rel="noopener"
           {% endif %}>{{ link.text }}</a>.
         {% endfor %}
       </p><!-- .site-info -->
-      {% if site.params.footer.has_social %}
+      {% if site.data.footer.has_social %}
         {% include "social.html" %}
       {% endif %}
     </div><!-- .site-footer-inside -->
