--- a/sass/imports/_general.scss
+++ b/sass/imports/_general.scss
@@ -54,19 +54,19 @@ h2 {
 }
 
 h3 {
-  font-size: 1.5rem;
+  font-size: 1.875rem;
 }
 
 h4 {
-  font-size: 1.25rem;
+  font-size: 1.5rem;
 }
 
 h5 {
-  font-size: 1.125rem;
+  font-size: 1.25rem;
 }
 
 h6 {
-  font-size: 1rem;
+  font-size: 1.125rem;
 }
 
 p {
@@ -94,9 +94,13 @@ pre {
   font-size: 0.875rem;
   line-height: 1.5;
   margin: 0 0 1.875rem;
-  padding: 1.5em;
+  overflow: auto;
+  padding: 1.5rem;
   text-align: left;
   white-space: pre;
+  word-spacing: normal;
+  word-break: normal;
+  word-wrap: normal;
 }
 
 :not(pre) > code {
@@ -168,7 +172,7 @@ li > ol {
 hr {
   border: 0;
   border-bottom: 1px solid _palette(border);
-  margin: 2.25em 0;
+  margin: 1.875em 0;
 }
 
 table {
@@ -197,7 +201,7 @@ th {
   font-weight: bold;
 }
 
-/* Form fields *//*???*/
+/* Form fields */
 label {
   font-weight: bold;
 }
@@ -251,16 +255,16 @@ input[type="submit"],
 input[type="button"],
 input[type="reset"],
 a.button {
-  background-color: transparent;
+  background-color: _palette(accent);
   border: 3px solid _palette(accent);
   border-radius: 25px;
-  box-shadow: 0 15px 20px -15px rgba(0, 0, 0, 0), 0 55px 50px -35px rgba(0, 0, 0, 0);
   box-sizing: border-box;
-  color: _palette(accent);
+  color: #fff;
   display: inline-block;
   font-size: 0.875rem;
   font-weight: bold;
   height: 3.25em;
+  letter-spacing: 0.025em;
   line-height: 1.5;
   padding: 0.25em 40px;
   -webkit-transition: background-color .3s, color .3s, box-shadow .3s;
@@ -269,9 +273,8 @@ a.button {
   &:hover,
   &:focus,
   &:active {
-    background-color: _palette(accent);
-    box-shadow: 0 15px 20px -15px rgba(0, 0, 0, .25), 0 55px 50px -35px rgba(0, 0, 0, .25);
-    color: #fff;
+    background-color: transparent;
+    color: _palette(accent);
     outline: 0;
   }
 }
@@ -284,6 +287,7 @@ a.button {
 
 .button {
   &.secondary {
+    background: transparent;
     border-color: #fff;
     color: #fff;
 
