--- a/sass/imports/_header.scss
+++ b/sass/imports/_header.scss
@@ -2,7 +2,7 @@
  * Site Header
  * ----------------------------------------------------------------------------
  */
-.site-header {
+ .site-header {
   background: #fff;
   padding-bottom: 1.25em;
   padding-top: 1.125em;
@@ -17,10 +17,10 @@
   display: flex;
 }
 
-#site-branding {
-  -ms-flex: 0 0 auto;
-  -webkit-flex: 0 0 auto;
-  flex: 0 0 auto;
+.site-branding {
+  -ms-flex: 0 1 auto;
+  -webkit-flex: 0 1 auto;
+  flex: 0 1 auto;
 
   a {
     border: 0;
@@ -48,7 +48,8 @@
 .site-navigation {
   margin-left: auto;
 
-  .menu {
+  .menu,
+  .submenu {
     list-style: none;
     margin: 0;
     padding: 0;
@@ -56,22 +57,21 @@
 
   .menu-item {
     color: _palette(meta);
-    display: inline-block;
     font-size: 0.875rem;
     line-height: 1.5;
-    margin: 0 0 0 30px;
+    position: relative;
 
-    &.current-menu-item {
+    &.current {
       color: _palette(accent);
     }
   }
-}
 
-#main-navigation {
   a {
     border: 0;
     color: inherit;
-  
+    display: inline-block;
+    padding: 0.625rem 0;
+
     &:hover,
     &:focus {
       color: _palette(accent);
@@ -81,6 +81,89 @@
 
 .menu-toggle {
   display: none;
+}
+
+@media only screen and (min-width: 801px) {
+  .site-navigation {
+    .menu-item {
+      display: inline-block;
+      margin: 0 0 0 30px;
+
+      &.has-children > a {
+        padding-right: 15px;
+        position: relative;
+
+        &:after {
+          background: 0;
+          border-color: currentColor;
+          border-style: solid;
+          border-width: 1px 1px 0 0;
+          box-sizing: border-box;
+          content: "";
+          height: 6px;
+          position: absolute;
+          right: 0;
+          top: 50%;
+          width: 6px;
+          -webkit-transform: translateY(-50%) rotate(135deg);
+          transform: translateY(-50%) rotate(135deg);
+        }
+      }
+
+      &.has-children:hover > .submenu {
+        opacity: 1;
+        -webkit-transition: margin .3s, opacity .2s;
+        transition: margin .3s, opacity .2s;
+        visibility: visible;
+      }
+    }
+
+    .submenu {
+      background: #fff;
+      border: 1px solid _palette(border);
+      border-radius: 3px;
+      left: -15px;
+      opacity: 0;
+      padding: 0.5rem 0;
+      position: absolute;
+      text-align: left;
+      top: 100%;
+      -webkit-transition: opacity .2s, visibility 0s .2s;
+      transition: opacity .2s, visibility 0s .2s;
+      visibility: hidden;
+      width: 160px;
+      z-index: 99;
+
+      .submenu {
+        left: 100%;
+        margin-top: -0.5rem;
+        position: absolute;
+        top: -1px;
+      }
+
+      .menu-item {
+        display: block;
+        margin: 0;
+        padding: 0 15px;
+
+        &.has-children > a:after {
+          -webkit-transform: translateY(-50%) rotate(45deg);
+          transform: translateY(-50%) rotate(45deg);
+        }
+      }
+
+      a {
+        display: block;
+        padding: 0.5rem 0;
+      }
+    }
+
+    .submenu-toggle {
+      display: none;
+    }
+
+    
+  }
 }
 
 @media only screen and (max-width: 800px) {
@@ -127,6 +210,35 @@
       padding: 4.5rem 4vw 3rem;
     }
 
+    .submenu {
+      border-top: 1px solid _palette(border);
+      display: none;
+      padding-left: 15px;
+
+      &.active {
+        display: block;
+      }
+    }
+
+    .submenu-toggle {
+      background: 0;
+      border: 0;
+      border-radius: 0;
+      color: _palette(meta);
+      display: block;
+      height: 45px;
+      padding: 0;
+      position: absolute;
+      right: 0;
+      top: 0;
+      width: 30px;
+
+      &.active .icon-angle-right {
+        -webkit-transform: rotate(135deg);
+        transform: rotate(135deg);
+      }
+    }
+
     .menu-item {
       border-bottom: 1px solid _palette(border);
       display: block;
@@ -134,6 +246,20 @@
 
       &:first-child {
         border-top: 1px solid _palette(border);
+      }
+
+      .menu-item {
+        &:last-child {
+          border: 0;
+        }
+
+        &:first-child {
+          border-top: 0;
+        }
+      }
+
+      &.has-children > a {
+        margin-right: 40px;
       }
     }
 
