--- a/components/docs_menu.html
+++ b/components/docs_menu.html
@@ -5,10 +5,16 @@
       <ul id="docs-toc" class="docs-toc">
         {% set site = include_dict.site %}
         {% set page = include_dict.page %}
+
+        {% set root_path = site.data.docs_toc.root.path | replace_regexp("^/", "") %}
+        <li {{ classNames('toc-item', {'current': page.relPath == root_path}) }}>
+          <a href="{{ getPage(site.data.docs_toc.root.path).url | relative_url }}">{{ site.data.docs_toc.root.title }}</a>
+        </li>
+
         {% for section in site.data.docs_toc.sections %}
+          {% set section_path = section.path | replace_regexp("^/", "") %}
           {% if section.type == "collection" %}
-            {% set section_path = section.path | replace_regexp("^/", "") %}
-            <li class="toc-item has-children{% if page.relDir == section_path %} current active{% endif %}">
+            <li {{ classNames('toc-item', 'has-children', {'current active': page.relDir == section_path}) }}>
               <a href="{{ section.path | relative_url }}">{{ section.title }}</a>
               {% set section_pages = getPages(section.path) | where("nav_order") | sort(false, true, "nav_order") %}
               {% if section_pages | length > 0 %}
@@ -18,10 +24,12 @@
               {% endif %}
             </li>
           {% else %}
-            <li class="toc-item{% if page.url == getPage(section.path).url %} current{% endif %}"><a
-            href="{{ getPage(section.path).url | relative_url }}">{{ section.title }}</a></li>
+            <li {{ classNames('toc-item', {'current': page.relPath == section_path}) }}>
+              <a href="{{ getPage(section.path).url | relative_url }}">{{ section.title }}</a>
+            </li>
           {% endif %}
         {% endfor %}
+
       </ul><!-- .docs-toc -->
     </div><!-- .docs-toc-wrap -->
   </div><!-- .docs-nav-inside -->
