--- a/components/docs_submenu.html
+++ b/components/docs_submenu.html
@@ -1,6 +1,6 @@
 <ul class="toc-submenu">
 {% for section_page in include_dict.section_pages %}
-  <li class="toc-item{% if include_dict.page.url == section_page.url %} current{% endif %}">
+  <li {{ classNames('toc-item', {'current': include_dict.page.url == section_page.url}) }}>
     <a href="{{ section_page.url | relative_url }}">{{ section_page.title }}</a>
   </li>
 {% endfor %}
