--- a/components/menu.html
+++ b/components/menu.html
@@ -1,6 +1,6 @@
 <ul class="{{ include_dict.menu_class }}">
   {% for item in include_dict.menu %}
-  <li class="menu-item{% if item.children | length > 0 %} has-children{% endif %}{% if include_dict.page.url == item.url %} current{% endif %}">
+  <li {{ classNames('menu-item', {'has-children': item.children | length > 0}, {'current': include_dict.page.url == item.url}) }}>
     <a href="{% if item.url | starts_with('#') %}{{ item.url }}{% else %}{{ item.url | relative_url }}{% endif %}">{{ item.title }}</a>
     {% if item.children | length > 0 %}
       {% set menu = item.children %}
