--- a/components/docs_menu.html
+++ b/components/docs_menu.html
@@ -6,28 +6,30 @@
         {% set site = include_dict.site %}
         {% set page = include_dict.page %}
 
-        {% set root_path = site.data.docs_toc.root.path | replace_regexp("^/", "") %}
-        <li {{ classNames('toc-item', {'current': page.relPath == root_path}) }}>
-          <a href="{{ getPage(site.data.docs_toc.root.path).url | relative_url }}">{{ site.data.docs_toc.root.title }}</a>
+        {% set root_page_path = site.data.docs_toc.root_folder | append("/index.md") %}
+        {% set root_page = getPage(root_page_path) %}
+        <li {{ classNames('toc-item', {'current': page.relPath == root_page.relPath}) }}>
+          <a href="{{ root_page.url | relative_url }}">{{ root_page.title }}</a>
         </li>
 
         {% for section in site.data.docs_toc.sections %}
-          {% set section_path = section.path | replace_regexp("^/", "") %}
-          {% if section.type == "collection" %}
-            <li {{ classNames('toc-item', 'has-children', {'current active': page.relDir == section_path}) }}>
-              <a href="{{ section.path | relative_url }}">{{ section.title }}</a>
-              {% set section_pages = getPages(section.path) | where("nav_order") | sort(false, true, "nav_order") %}
-              {% if section_pages | length > 0 %}
-                <button class="submenu-toggle"><span class="screen-reader-text">Submenu</span><span class="icon-angle-right" aria-hidden="true"></span></button>
-                {% set include_dict = {"section_pages": section_pages, "page": page, "site": site} %}
-                {% include "docs_submenu.html" %}
-              {% endif %}
-            </li>
-          {% else %}
-            <li {{ classNames('toc-item', {'current': page.relPath == section_path}) }}>
-              <a href="{{ getPage(section.path).url | relative_url }}">{{ section.title }}</a>
-            </li>
-          {% endif %}
+          {% set section_rel_folder = site.data.docs_toc.root_folder | append("/") | append(section) %}
+          {% set section_abs_folder = "/" | append(section_rel_folder) %}
+          {% set section_page_path = section_abs_folder | append("/index.md") %}
+          {% set section_page = getPage(section_page_path) %}
+          {% set child_pages = getPages(section_abs_folder) | where("basename", "!=", "index.md") | sort(false, true, "weight") %}
+          {% set child_count = child_pages | length %}
+          {% set has_children = true if child_count > 0 else false %}
+          {% set is_current_page = true if page.relPath == section_page.relPath else false %}
+          {% set is_active = true if (page.relDir == section_page.relDir or page.relPath == section_page.relPath) else false %}
+          <li {{ classNames('toc-item', {'has-children': has_children, 'current': is_current_page, 'active': is_active}) }}>
+            <a href="{{ section_page.url | relative_url }}">{{ section_page.title }}</a>
+            {% if has_children %}
+              <button class="submenu-toggle"><span class="screen-reader-text">Submenu</span><span class="icon-angle-right" aria-hidden="true"></span></button>
+              {% set include_dict = {"child_pages": child_pages, "page": page, "site": site} %}
+              {% include "docs_submenu.html" %}
+            {% endif %}
+          </li>
         {% endfor %}
 
       </ul><!-- .docs-toc -->
