--- a/components/docs_submenu.html
+++ b/components/docs_submenu.html
@@ -1,7 +1,7 @@
 <ul class="toc-submenu">
-{% for section_page in include_dict.section_pages %}
-  <li {{ classNames('toc-item', {'current': include_dict.page.url == section_page.url}) }}>
-    <a href="{{ section_page.url | relative_url }}">{{ section_page.title }}</a>
+{% for child_page in include_dict.child_pages %}
+  <li {{ classNames('toc-item', {'current': include_dict.page.relPath == child_page.relPath}) }}>
+    <a href="{{ child_page.url | relative_url }}">{{ child_page.title }}</a>
   </li>
 {% endfor %}
 </ul>
