--- a/templates/docs.html
+++ b/templates/docs.html
@@ -14,6 +14,17 @@
             </header><!-- .post-header -->
             <div class="post-content">
               {{ page.content }}
+              {% set child_pages_path = "/" | append(page.relDir) %}
+              {% set child_pages = getPages(child_pages_path) | where("basename", "!=", "index.md") | sort(false, true, "weight") %}
+              {% set child_count = child_pages | length %}
+              {% set has_children = true if child_count > 0 else false %}
+              {% if has_children %}
+                <ul class="docs-section-items">
+                  {% for child_page in child_pages %}
+                  <li class="docs-section-item"><a href="{{ child_page.url | relative_url }}" class="docs-item-link">{{ child_page.title }}<span class="icon-angle-right" aria-hidden="true"></span></a></li>
+                  {% endfor %}
+                </ul><!-- .docs-section-pages -->
+              {% endif %}
             </div><!-- .post-content -->
           </div><!-- .post-inside -->
         </article><!-- .post -->
