--- a/templates/overview.html
+++ b/templates/overview.html
@@ -18,23 +18,23 @@
     <div class="inner">
       <div class="block-items">
         {% for section in site.data.docs_toc.sections %}
-        <section class="block-item">
-          <div class="block-item-inside">
-            {% if section.type == "collection" %}
-              <h2 class="block-item-title line-left"><a href="{{ section.path | relative_url }}">{{ section.title }}</a></h2>
-              {% if section.subtitle %}
-              <p class="block-item-text">{{ section.subtitle | safe }}</p>
-              <p class="block-item-cta"><a href="{{ section.path | relative_url }}">Learn More <span class="icon-arrow-right" aria-hidden="true"></span></a></p>
+          {% set section_rel_folder = site.data.docs_toc.root_folder | append("/") | append(section) %}
+          {% set section_abs_folder = "/" | append(section_rel_folder) %}
+          {% set section_page_path = section_rel_folder | append("/index.md") %}
+          {% set section_page = getPage(section_page_path) %}
+          {% set child_pages = getPages(section_abs_folder) | where("basename", "!=", "index.md") %}
+          {% set child_count = child_pages | length %}
+          {% set has_children = true if child_count > 0 else false %}
+
+          <section class="block-item">
+            <div class="block-item-inside">
+              <h2 {{ classNames('block-item-title', {'line-left': has_children}) }}><a href="{{ section_page.url | relative_url }}">{{ section_page.title }}</a></h2>
+              {% if section_page.excerpt %}
+                <p class="block-item-text">{{ section_page.excerpt | safe }}</p>
+                <p class="block-item-cta"><a href="{{ section_page.url | relative_url }}">Learn More <span class="icon-arrow-right" aria-hidden="true"></span></a></p>
               {% endif %}
-            {% else %}
-              <h2 class="block-item-title"><a href="{{ getPage(section.path).url | relative_url }}">{{ section.title }}</a></h2>
-              {% if section.subtitle %}
-              <p class="block-item-text">{{ section.subtitle | safe }}</p>
-              <p class="block-item-cta"><a href="{{ getPage(section.path).url | relative_url }}">Learn More <span class="icon-arrow-right" aria-hidden="true"></span></a></p>
-              {% endif %}
-            {% endif %}
-          </div><!-- .block-item-inside -->
-        </section><!-- .block-item -->
+            </div><!-- .block-item-inside -->
+          </section><!-- .block-item -->
         {% endfor %}
       </div><!-- .block-items -->
     </div><!-- .inner -->
