--- a/templates/overview.html
+++ b/templates/overview.html
@@ -17,8 +17,8 @@
   <div class="docs-block outer">
     <div class="inner">
       <div class="block-items">
-        {% for section in site.data.docs_toc.sections %}
-          {% set section_rel_folder = site.data.docs_toc.root_folder | append("/") | append(section) %}
+        {% for section in site.data.doc_sections.sections %}
+          {% set section_rel_folder = site.data.doc_sections.root_folder | append("/") | append(section) %}
           {% set section_abs_folder = "/" | append(section_rel_folder) %}
           {% set section_page_path = section_rel_folder | append("/index.md") %}
           {% set section_page = getPage(section_page_path) %}
