added option to serve docs from root page

--- a/templates/overview.html
+++ b/templates/overview.html
@@ -18,11 +18,10 @@
     <div class="inner">
       <div class="block-items">
         {% for section in site.data.doc_sections.sections %}
-          {% set section_rel_folder = site.data.doc_sections.root_folder | append("/") | append(section) %}
-          {% set section_abs_folder = "/" | append(section_rel_folder) %}
-          {% set section_page_path = section_rel_folder | append("/index.md") %}
+          {% set section_folder = site.data.doc_sections.root_folder | append(section) %}
+          {% set section_page_path = section_folder | append("/index.md") %}
           {% set section_page = getPage(section_page_path) %}
-          {% set child_pages = getPages(section_abs_folder) | where("basename", "!=", "index.md") %}
+          {% set child_pages = getPages(section_folder) | where("basename", "!=", "index.md") %}
           {% set child_count = child_pages | length %}
           {% set has_children = true if child_count > 0 else false %}
 
