--- a/components/docs_menu.html
+++ b/components/docs_menu.html
@@ -6,18 +6,17 @@
         {% set site = include_dict.site %}
         {% set page = include_dict.page %}
 
-        {% set root_page_path = site.data.doc_sections.root_folder | append("/index.md") %}
+        {% set root_page_path = site.data.doc_sections.root_folder | append("index.md") %}
         {% set root_page = getPage(root_page_path) %}
         <li {{ classNames('toc-item', {'current': page.relPath == root_page.relPath}) }}>
           <a href="{{ root_page.url | relative_url }}">{{ root_page.title }}</a>
         </li>
 
         {% for section in site.data.doc_sections.sections %}
-          {% set section_rel_folder = site.data.doc_sections.root_folder | append("/") | append(section) %}
-          {% set section_abs_folder = "/" | append(section_rel_folder) %}
-          {% set section_page_path = section_abs_folder | append("/index.md") %}
+          {% set section_folder = site.data.doc_sections.root_folder | append(section) %}
+          {% set section_page_path = section_folder | append("/index.md") %}
           {% set section_page = getPage(section_page_path) %}
-          {% set child_pages = getPages(section_abs_folder) | where("basename", "!=", "index.md") | sort(false, true, "weight") %}
+          {% set child_pages = getPages(section_folder) | where("basename", "!=", "index.md") | sort(false, true, "weight") %}
           {% set child_count = child_pages | length %}
           {% set has_children = true if child_count > 0 else false %}
           {% set is_current_page = true if page.relPath == section_page.relPath else false %}
