--- a/components/submenu.html
+++ b/components/submenu.html
@@ -1,6 +1,6 @@
 <ul class="{{ include_dict.menu_class }}">
   {% for action in include_dict.submenu %}
-  <li {{ classNames('menu-item', { 'current': include_dict.page.url == action.url, 'menu-button': action.type != 'link' }) }}>
+  <li {{ classNames('menu-item', { 'current': include_dict.page.url == action.url, 'menu-button': action.style != 'link' }) }}>
     {% set include_dict = {'action': action} %}
     {% include "action_link.html" %}
   </li>
