--- a/layouts/docs.html
+++ b/layouts/docs.html
@@ -33,6 +33,7 @@
     <nav id="page-nav" class="page-nav">
       <div id="page-nav-inside" class="page-nav-inside sticky">
         <h2 class="page-nav-title">Jump to Section</h2>
+        <div id="page-nav-link-container"></div>
       </div><!-- .page-nav-inside -->
     </nav><!-- .page-nav -->
   </div><!-- .docs-content -->
