--- a/sass/main.scss.njk
+++ b/sass/main.scss.njk
@@ -35,4 +35,4 @@ $palette: (
 @import "imports/docs";
 @import "imports/sections";
 @import "imports/footer";
-@import "imports/prism";
+//@import "imports/prism";
