refactored main.js

--- a/components/docs_menu.html
+++ b/components/docs_menu.html
@@ -6,9 +6,9 @@
 <nav id="docs-nav" class="docs-nav">
   <div id="docs-nav-inside" class="docs-nav-inside sticky">
     <button id="docs-nav-toggle" class="docs-nav-toggle">Navigate Docs<span class="icon-angle-right" aria-hidden="true"></span></button>
-    <div class="docs-toc-wrap">
-      <ul id="docs-toc" class="docs-toc">
-        <li {{ classNames('toc-item', {'current': page.url == root_page.url}) }}>
+    <div class="docs-nav-menu">
+      <ul id="docs-menu" class="docs-menu">
+        <li {{ classNames('docs-menu-item', {'current': page.url == root_page.url}) }}>
           <a href="{{ root_page.url | relative_url }}">{{ root_page.title }}</a>
         </li>
         {% for section in site.data.doc_sections.sections %}
@@ -19,16 +19,16 @@
           {% set has_children = true if child_count > 0 else false %}
           {% set is_current_page = true if page.url == section_page.url else false %}
           {% set is_active = page.url | starts_with(section_page.url) %}
-          <li {{ classNames('toc-item', {'has-children': has_children, 'current': is_current_page, 'active': is_active}) }}>
+          <li {{ classNames('docs-menu-item', {'has-children': has_children, 'current': is_current_page, 'active': is_active}) }}>
             <a href="{{ section_page.url | relative_url }}">{{ section_page.title }}</a>
             {% if has_children %}
-              <button class="submenu-toggle"><span class="screen-reader-text">Submenu</span><span class="icon-angle-right" aria-hidden="true"></span></button>
+              <button class="docs-submenu-toggle"><span class="screen-reader-text">Submenu</span><span class="icon-angle-right" aria-hidden="true"></span></button>
               {% set include_dict = {"child_pages": child_pages, "page": page, "site": site} %}
               {% include "docs_submenu.html" %}
             {% endif %}
           </li>
         {% endfor %}
-      </ul><!-- .docs-toc -->
-    </div><!-- .docs-toc-wrap -->
+      </ul><!-- .docs-menu -->
+    </div><!-- .docs-nav-menu -->
   </div><!-- .docs-nav-inside -->
 </nav><!-- .docs-nav -->
