--- a/sass/imports/_general.scss
+++ b/sass/imports/_general.scss
@@ -385,7 +385,7 @@ input[type="reset"],
 #menu-open,
 #menu-close,
 .docs-nav .docs-nav-toggle,
-.docs-nav .submenu-toggle {
+.docs-nav .docs-submenu-toggle {
   background: 0;
   border: 0;
   border-radius: 0;
