Theme update - added alt attribute to images - added nofollow attribute support to links - added favicon - updated model field descriptions - updated Google fonts link - fixed color palette switching in studio - removed FontAwesome icons - updated CSS - updated reframe.js plugin

--- a/components/section_grid.html
+++ b/components/section_grid.html
@@ -19,7 +19,7 @@
           <div class="grid-item-inside">
             {% if item.image %}
             <div class="grid-item-image">
-              <img src="{{ item.image | relative_url }}" alt="{{ item.title }}" />
+              <img src="{{ item.image | relative_url }}" alt="{{ item.image_alt }}" />
             </div>
             {% endif %}
             {% if item.title %}
