--- a/sass/imports/_footer.scss
+++ b/sass/imports/_footer.scss
@@ -1,32 +1,28 @@
-/**
- * Site Footer
- */
 .site-footer {
   background-color: #fff;
   padding-bottom: 1.5em;
   padding-top: 1.5em;
+}
 
+#colophon {
   a:not(.button) {
     color: inherit;
 
     &:hover,
     &:focus {
-      color: _palette(accent);
+      color: $color-primary;
     }
   }
 }
 
 .site-info,
 .social-links {
-  -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
   font-size: 0.875em;
@@ -41,6 +37,7 @@
 
 .site-info {
   margin: 0.25em 0 0;
+  text-align: center;
 
   .copyright,
   > a {
@@ -52,42 +49,40 @@
   margin-top: 0.9375em;
 
   a {
-    margin: 0 15px 0.5em;
+    margin: 0 10px 0.5em;
   }
 
   .icon {
-    font-size: 18px;
+    font-size: 20px;
   }
 }
 
 @media only screen and (min-width: 641px) {
   .site-footer-inside {
-    -webkit-box-align: start;
     -ms-flex-align: start;
     align-items: flex-start;
-    display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
   }
 
-  .site-info,
-  .social-links {
-    -webkit-box-pack: start;
+  .site-info {
     -ms-flex-pack: start;
     justify-content: flex-start;
+    text-align: left;
   }
 
   .social-links {
-    -webkit-box-flex: 0;
     -ms-flex: 0 0 auto;
     flex: 0 0 auto;
     -ms-flex-wrap: nowrap;
     flex-wrap: nowrap;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
     margin-left: auto;
     margin-top: 0;
 
     a {
-      margin-left: 30px;
+      margin-left: 20px;
       margin-right: 0;
     }
   }
