--- a/sass/imports/_header.scss
+++ b/sass/imports/_header.scss
@@ -1,6 +1,3 @@
-/**
- * Site Header
- */
 .site-header {
   background: #fff;
   padding-bottom: 1.25em;
@@ -8,29 +5,20 @@
 }
 
 .site-header-inside {
-  -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
 .site-branding {
-  -webkit-box-flex: 0;
   -ms-flex: 0 1 auto;
   flex: 0 1 auto;
-
-  a {
-    border: 0;
-    color: inherit;
-    display: inline-block;
-  }
 }
 
 .site-title {
-  color: _palette(secondary);
-  font-size: 1.75rem;
+  color: $gray-700;
+  font-size: 1.5em;
   font-weight: bold;
   line-height: 1.2;
   margin: 0;
@@ -44,10 +32,6 @@
   }
 }
 
-.site-navigation {
-  margin-left: auto;
-}
-
 .menu,
 .submenu {
   list-style: none;
@@ -59,40 +43,60 @@
   position: relative;
 
   &.current {
-    color: _palette(accent);
+    color: $color-primary;
   }
 
   a {
     &:not(.button) {
-      border: 0;
+      display: inline-block;
+      font-size: 0.9375em;
+      line-height: 1.5;
+    }
+  }
+}
+
+#masthead {
+  a {
+    &:not(.button) {
       color: inherit;
       display: inline-block;
-      font-size: 14px;
-      line-height: 1.5;
+      text-decoration: none;
 
       &:hover {
-        color: _palette(accent);
+        color: $color-primary;
+      }
+    }
+  }
+
+  .site-branding {
+    a {
+      &:hover {
+        color: inherit;
       }
     }
   }
 }
 
-.menu-toggle {
-  display: none;
-}
-
 @media only screen and (min-width: 801px) {
+  #menu-open,
+  #menu-close {
+    display: none;
+  }
+
+  .site-navigation {
+    margin-left: auto;
+  }
+
   .menu {
-    -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
   }
 
   .menu-item {
-    margin-left: 20px;
+    display: inline-block;
+    margin: 0 0 0 1.25em;
     padding-bottom: 0.1875em;
     padding-top: 0.1875em;
 
@@ -134,27 +138,7 @@
         }
       }
     }
-  }
 
-  .submenu {
-    background: #fff;
-    border: 1px solid _palette(border);
-    border-radius: 3px;
-    left: 0;
-    min-width: 180px;
-    opacity: 0;
-    padding: 0.75em 0;
-    position: absolute;
-    text-align: left;
-    top: 100%;
-    -webkit-transition: opacity .2s, visibility 0s .2s;
-    transition: opacity .2s, visibility 0s .2s;
-    visibility: hidden;
-    width: 100%;
-    z-index: 99;
-  }
-
-  .menu-item {
     .submenu-toggle {
       display: none;
     }
@@ -168,10 +152,27 @@
   }
 
   .submenu {
+    background: #fff;
+    border: 1px solid $gray-300;
+    border-radius: $border-radius-sm;
+    box-shadow: $box-shadow;
+    left: 0;
+    min-width: 180px;
+    opacity: 0;
+    padding: 0.5em 0;
+    position: absolute;
+    text-align: left;
+    top: 100%;
+    -webkit-transition: opacity .2s, visibility 0s .2s;
+    transition: opacity .2s, visibility 0s .2s;
+    visibility: hidden;
+    width: 100%;
+    z-index: 99;
+
     .menu-item {
       display: block;
       margin: 0;
-      padding: 0 15px;
+      padding: 0 1em;
     }
 
     a {
@@ -193,12 +194,12 @@
   }
 
   .site-branding {
-    margin-right: 10px;
+    margin-right: 0.625em;
   }
 
   .site-header {
     &:after {
-      background: rgba(_palette(primary),.6);
+      background: rgba($gray-600,.6);
       content: "";
       height: 100vh;
       left: 0;
@@ -211,11 +212,6 @@
       width: 100%;
       z-index: 998;
     }
-  }
-
-  #menu-open {
-    display: block;
-    margin-left: auto;
   }
 
   .site-navigation {
@@ -262,53 +258,57 @@
       visibility: visible;
     }
 
-    .site-header:after {
-      opacity: 1;
-      -webkit-transition-delay: 0s;
-      transition-delay: 0s;
-      visibility: visible;
+    .site-header {
+      &:after {
+        opacity: 1;
+        -webkit-transition-delay: 0s;
+        transition-delay: 0s;
+        visibility: visible;
+      }
     }
   }
 
-  #menu-close {
-    display: block;
-    position: absolute;
-    right: 3vw;
-    top: 1.125rem;
-  }
-
   .menu {
-    padding: 4.5rem 3vw 3rem;
+    padding: calc(3vw + 2.8125em) $container-padding 3em;
   }
 
   .submenu {
-    border-top: 1px solid _palette(border);
+    border-top: 1px solid $gray-300;
     display: none;
-    padding-left: 15px;
+    padding-left: 1em;
   }
 
   .menu-item {
-    border-top: 1px solid _palette(border);
     display: block;
     margin: 0;
 
-    &:not(.menu-button):last-child {
-      border-bottom: 1px solid _palette(border);
+    &:not(.menu-button) {
+      border-bottom: 1px solid $gray-300;
+
+      &:first-child {
+        border-top: 1px solid $gray-300;
+      }
     }
 
     a {
       &:not(.button),
       &.button-icon {
-        padding: 1em 0;
+        padding: 0.75em 0;
       }
 
-      &:not(.button-icon) {
+      &:not(.button) {
         display: block;
+      }
+
+      &.button {
+        &:not(.button-icon) {
+          width: 100%;
+        }
       }
     }
 
     &.has-children > a {
-      margin-right: 30px;
+      margin-right: 2em;
     }
 
     .menu-item {
@@ -320,24 +320,13 @@
         border-bottom: 0;
       }
     }
-
+  
     .submenu-toggle {
-      background: 0;
-      border: 0;
-      border-radius: 0;
-      color: _palette(meta);
-      display: block;
-      height: 48px;
-      padding: 0;
+      color: $gray-500;
+      height: 2.8125em;
       position: absolute;
       right: 0;
       top: 0;
-      width: 30px;
-  
-      &.active .icon-angle-right {
-        -webkit-transform: rotate(135deg);
-        transform: rotate(135deg);
-      }
     }
 
     &.active {
@@ -347,7 +336,7 @@
           transform: rotate(135deg);
         }
       }
-
+  
       .submenu {
         display: block;
       }
@@ -356,12 +345,25 @@
 
   .menu-button {
     & > .button:not(.button-icon) {
-      margin-bottom: 1em;
-      margin-top: 1em;
+      margin-bottom: 1.25em;
+      margin-top: 1.25em;
     }
- 
+
     & + .menu-button {
-      border-top: 0;
+      & > .button:not(.button-icon) {
+        margin-top: 0;
+      }
     }
+  }
+
+  #menu-open {
+    margin-left: auto;
+  }
+
+  #menu-close {
+    display: block;
+    position: absolute;
+    right: $container-padding;
+    top: $container-padding;
   }
 }
