--- a/sass/imports/_reset.scss
+++ b/sass/imports/_reset.scss
@@ -1,9 +1,6 @@
-/**
- * Reset
- * normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css
- */
+// normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css
 html {
-  -ms-text-size-adjust: 100%;
+  line-height: 1.15;
   -webkit-text-size-adjust: 100%;
 }
 
@@ -11,54 +8,18 @@ body {
   margin: 0;
 }
 
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-main,
-nav,
-section {
+main {
   display: block;
 }
 
-summary {
-  display: list-item;
-}
-
-figure {
-  margin: 0;
-}
-
-pre,
-code,
-kbd,
-samp {
-  font-family: _font(monospace);
-  font-size: 1em;
-}
-
-audio,
-canvas,
-video {
-  display: inline-block;
-}
-
-audio:not([controls]) {
-  display: none;
+hr {
+  box-sizing: content-box;
   height: 0;
-}
-
-[hidden],
-template {
-  display: none;
+  overflow: visible;
 }
 
 a {
   background-color: transparent;
-  -webkit-text-decoration-skip: objects;
 }
 
 a:focus {
@@ -79,10 +40,18 @@ abbr[title] {
 b,
 strong {
   font-weight: bold;
+
+  .font-fira-sans & {
+    font-weight: 600;
+  }
 }
 
-dfn {
-  font-style: italic;
+pre,
+code,
+kbd,
+samp {
+  font-family: $font-monospace;
+  font-size: 1em;
 }
 
 small {
@@ -106,25 +75,8 @@ sup {
 }
 
 img {
-  border: 0;
+  border-style: none;
   vertical-align: middle;
-}
-
-svg:not(:root) {
-  overflow: hidden;
-}
-
-blockquote,
-q {
-  quotes: none;
-}
-
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: "";
-  content: none;
 }
 
 button,
@@ -132,7 +84,9 @@ input,
 optgroup,
 select,
 textarea {
-  font: inherit;
+  font-family: inherit;
+  font-size: 100%;
+  line-height: 1.15;
   margin: 0;
 }
 
@@ -147,22 +101,46 @@ select {
 }
 
 button,
-html [type="button"],
+[type="button"],
 [type="reset"],
 [type="submit"] {
   -webkit-appearance: button;
-  cursor: pointer;
-}
-
-button[disabled],
-html input[disabled] {
-  cursor: default;
 }
 
 button::-moz-focus-inner,
-input::-moz-focus-inner {
-  border: 0;
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
+  border-style: none;
   padding: 0;
+}
+
+button:-moz-focusring,
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
+fieldset {
+  padding: 0.35em 0.75em 0.625em;
+}
+
+legend {
+  box-sizing: border-box;
+  color: inherit;
+  display: table;
+  max-width: 100%;
+  padding: 0;
+  white-space: normal;
+}
+
+progress {
+  vertical-align: baseline;
+}
+
+textarea {
+  overflow: auto;
 }
 
 [type="checkbox"],
@@ -181,7 +159,6 @@ input::-moz-focus-inner {
   outline-offset: -2px;
 }
 
-[type="search"]::-webkit-search-cancel-button,
 [type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
@@ -191,20 +168,18 @@ input::-moz-focus-inner {
   font: inherit;
 }
 
-textarea {
-  overflow: auto;
+details {
+  display: block;
 }
 
-optgroup {
-  font-weight: bold;
+summary {
+  display: list-item;
 }
 
-progress {
-  display: inline-block;
-  vertical-align: baseline;
+template {
+  display: none;
 }
 
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
+[hidden] {
+  display: none;
 }
