--- a/sass/imports/_sections.scss
+++ b/sass/imports/_sections.scss
@@ -1,11 +1,8 @@
-/**
- * Sections
- */
 .block {
   padding-top: 3.75em;
 
   &:not(.block-hero) {
-    background: _palette(bg);
+    background: $gray-100;
   }
 
   &:last-child {
@@ -13,17 +10,20 @@
   }
 }
 
+.block-image {
+  margin-bottom: 1.5em;
+}
+
 .block-header {
   margin-bottom: 1.5em;
 }
 
 .block-title {
-  font-size: 2.125em;
   margin: 0;
 }
 
 .block-subtitle {
-  color: _palette(meta);
+  color: $gray-500;
   line-height: 1.5;
   margin-bottom: 0;
 
@@ -34,10 +34,8 @@
 
 .block-buttons,
 .grid-item-buttons {
-  -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
@@ -45,100 +43,168 @@
   margin-bottom: 0.9375em;
 
   a {
-    margin-bottom: 1em;
-    margin-right: 1em;
+    font-weight: bold;
+    text-decoration: none;
   }
 }
 
 .block-buttons {
+  -ms-flex-pack: center;
+  justify-content: center;
+
   a {
-    &:not(.button) {
-      border: 0;
-      font-weight: bold;
-    }
+    margin: 0 0.375em 0.75em;
+  }
+}
+
+.grid-item-buttons {
+  a {
+    margin: 0 0.75em 0.75em 0;
   }
 }
 
 .has-gradient {
-  .block-title,
-  .block-subtitle,
-  .block-buttons a:not(.button) {
+  .block-subtitle {
     color: inherit;
   }
 }
 
-/* Content section */
+.block-text,
+.block-hero {
+  .block-buttons {
+    &:not(:first-child) {
+      margin-top: 1.875em;
+    }
+  }
+}
+
+// Content section
 .block-text {
   .grid-item {
-    &:only-child {
-      -ms-flex-preferred-size: 100%;
-      flex-basis: 100%;
-      max-width: 680px;
-      text-align: center;
+    max-width: $container-sm;
+    text-align: center;
+  }
+
+  .block-title {
+    font-size: 1.875em;
+  }
+}
+
+@media only screen and (min-width: 641px) {
+  .block-text {
+    .block-content {
+      font-size: 1.125em;
+    }
+
+    .block-title {
+      font-size: 2.125em;
+    }
+  }
+}
+
+@media only screen and (min-width: 801px) {
+  .block-text {
+    .grid-item {
+      &:not(:only-child) {
+        -ms-flex: 0 0 50%;
+        flex: 0 0 50%;
+        max-width: 50%;
+      }
     }
   }
 
-  .block-content {
-    font-size: 1.125em;
-  }
-}
+  .block-body {
+    &:not(:only-child) {
+      text-align: left;
 
-.block-image {
-  -ms-flex-preferred-size: 50%;
-  flex-basis: 50%;
-  max-width: 50%;
-  margin-bottom: 1.875rem;
-}
+      .block-buttons {
+        -ms-flex-pack: start;
+        justify-content: flex-start;
 
-.block-body {
-  -ms-flex-preferred-size: 50%;
-  flex-basis: 50%;
-  max-width: 50%;
-
-  &:only-child {
-    .block-buttons {
-      -webkit-box-pack: center;
-      -ms-flex-pack: center;
-      justify-content: center;
-
-      a {
-        margin-left: 0.5em;
-        margin-right: 0.5em;
+        a {
+          margin-left: 0;
+          margin-right: 0.75em;
+        }
       }
     }
   }
 }
 
-/* CTA section */
+@media only screen and (min-width: 1001px) {
+  .block-image {
+    &:not(:only-child) {
+      padding-right: 2.5em;
+    }
+  }
+
+  .grid-swap {
+    .block-image {
+      &:not(:only-child) {
+        padding-left: 2.5em;
+        padding-right: 0.9375em;
+      }
+    }
+  }
+}
+
+// CTA section
 .block-cta {
   .has-gradient {
-    border-radius: 5px;
-    padding: 3.75em 5% 1.875em;
+    border-radius: $border-radius;
+    margin-bottom: 1.875em;
+    padding: 3.75em 3vw 1.875em;
   }
 
   .block-header {
-    -ms-flex-preferred-size: 66.666%;
-    flex-basis: 66.666%;
-    max-width: 66.666%;
+    max-width: $container-sm;
+    text-align: center;
+  }
+
+  .block-title {
+    font-size: 1.875em;
   }
 
   .block-subtitle {
     font-size: 1.125em;
   }
+}
 
-  .block-buttons {
-    a {
-      margin-left: 0.5em;
-      margin-right: 0.5em;
+@media only screen and (min-width: 641px) {
+  .block-title {
+    font-size: 2.125em;
+  }
+}
+
+@media only screen and (min-width: 801px) {
+  .block-cta {
+    .has-gradient {
+      padding-left: 7%;
+      padding-right: 7%;
+    }
+
+    .block-header {
+      -ms-flex: 0 0 66.666%;
+      flex: 0 0 66.666%;
+      max-width: 66.666%;
+      text-align: left;
+    }
+
+    .block-buttons {
+      -ms-flex: 0 0 33.333%;
+      flex: 0 0 33.333%;
+      margin-top: 0;
+      max-width: 33.333%;
     }
   }
 }
 
-/* Grid section */
+// Grid section
 .block-grid {
-  &:not(.has-header) {
-    background: 0;
-    padding-top: 0;
+  .block-hero + & {
+    &:not(.has-header) {
+      background: 0;
+      padding-top: 0;
+    }
   }
 
   .block-header {
@@ -147,73 +213,68 @@
   }
 
   .block-title {
-    font-size: 1.875rem;
+    font-size: 1.875em;
   }
 
   .grid-item {
-    display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
     margin-bottom: 1.875em;
   }
+}
 
-  .grid-item-inside {
-    background: #fff;
-    border: 1px solid _palette(border);
-    border-radius: 3px;
-    box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.08);
-    -webkit-box-flex: 1;
-    -ms-flex-positive: 1;
-    flex-grow: 1;
-    padding-bottom: 0.25em;
-  }
+.grid-item-inside {
+  background: #fff;
+  border: 1px solid $gray-300;
+  border-radius: $border-radius-sm;
+  box-shadow: $box-shadow;
+  box-sizing: border-box;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
+  padding-bottom: 0.75em;
 }
 
 .grid-item-image {
-  border-radius: 3px 3px 0 0;
+  border-radius: $border-radius-sm $border-radius-sm 0 0;
   display: block;
   width: 100%;
 
   img {
-    border-radius: 3px 3px 0 0;
+    border-radius: $border-radius-sm $border-radius-sm 0 0;
   }
 }
 
 .grid-item-title {
   font-size: 1.5em;
-  margin-bottom: 0.75rem;
-  margin-top: 1.5rem;
+  margin: 1em 0 0.5em;
+  padding-left: 1em;
+  padding-right: 1em;
 
   &:first-child {
-    margin-top: 1.875rem;
+    margin-top: 1.25em;
   }
 
   a {
-    border: 0;
-    color: inherit;
-
-    &:hover,
-    &:focus {
-      color: _palette(meta);
-    }
+    color: inherit !important;
+    text-decoration: none;
   }
 }
 
+.grid-item-content,
+.grid-item-buttons {
+  padding-left: 1.5em;
+  padding-right: 1.5em;
+}
+
 .grid-item-content {
-  p {
-    margin-bottom: 1.5em;
-  }
+  margin-bottom: 1.25em;
 }
 
 .grid-item-buttons {
   a {
     &:not(.button) {
-      border: 0;
-
       &:after {
         font-size: 1.125em;
         content: "\2192";
@@ -224,48 +285,31 @@
   }
 }
 
-.grid-item-title,
-.grid-item-content,
-.grid-item-buttons {
-  padding-left: 1.875rem;
-  padding-right: 1.875rem;
+@media only screen and (max-width: 1000px) {
+  .block-grid {
+    .grid-item {
+      margin-bottom: 4vw;
+    }
+  }
 }
 
-/* Hero Section */
+// Hero section
 .block-hero {
-  color: #fff;
   padding-bottom: 7.5em;
-  padding-top: 3.75em;
   position: relative;
   text-align: center;
-
-  .inner-sm {
-    position: relative;
-  }
 
   .block-header {
     margin-bottom: 0.75em;
   }
 
   .block-title {
-    font-size: 3em;
+    font-size: 2.25em;
   }
 
   .block-content {
-    font-size: 1.25em;
+    font-size: 1.125em;
     line-height: 1.5;
-  }
-
-  .block-buttons {
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-
-    a {
-      font-size: 1em;
-      margin-left: 0.5em;
-      margin-right: 0.5em;
-    }
   }
 
   & + .block {
@@ -274,97 +318,20 @@
   }
 }
 
-
-
-
-
-
-@media only screen and (min-width: 1001px) {
-  .block-image {
-    &:not(:only-child) {
-      padding-right: 45px;
-    }
-  }
-
-  .grid-swap {
-    .block-image {
-      &:not(:only-child) {
-        padding-left: 45px;
-        padding-right: 15px;
-      }
-    }
-  }
-}
-
-@media only screen and (max-width: 1000px) {
-  .block-grid {
-    .grid-item {
-      margin-bottom: 3vw;
-    }
-
-    .grid-item-title,
-    .grid-item-content,
-    .grid-item-buttons {
-      padding-left: 1.5rem;
-      padding-right: 1.5rem;
-    }
-  }
-}
-
-@media only screen and (max-width: 800px) {
-  .block-cta {
-    .has-gradient {
-      padding-left: 3vw;
-      padding-right: 3vw;
-    }
-  }
-
-  .block-cta,
-  .block-text {
-    .grid-item {
-      -ms-flex-preferred-size: 100%;
-      flex-basis: 100%;
-      max-width: 680px;
-      text-align: center;
-    }
-
-    .block-buttons {
-      -webkit-box-pack: center;
-      -ms-flex-pack: center;
-      justify-content: center;
-
-      a {
-        margin-left: 0.5em;
-        margin-right: 0.5em;
-      }
-    }
-  }
-}
-
-@media only screen and (max-width: 640px) {
-  .block-title {
-    font-size: 2em;
-  }
-
+@media only screen and (min-width: 641px) {
   .block-hero {
     .block-title {
-      font-size: 2.25em;
+      font-size: 3em;
     }
 
     .block-content {
-      font-size: 1.125em;
+      font-size: 1.25em;
     }
 
     .block-buttons {
       a {
-        font-size: 14px;
+        font-size: 1em;
       }
-    }
-  }
-
-  .block-text {
-    .block-content {
-      font-size: 1em;
     }
   }
 }
