--- a/sass/imports/_structure.scss
+++ b/sass/imports/_structure.scss
@@ -1,35 +1,6 @@
-/**
- * Structure
- */
-.outer {
-  padding-left: 3vw;
-  padding-right: 3vw;
-}
-
-.inner {
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 1200px;
-}
-
-.inner-md {
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 800px;
-}
-
-.inner-sm {
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 680px;
-}
-
 .site {
-  display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
   min-height: 100vh;
@@ -37,8 +8,31 @@
 }
 
 .site-content {
-  -webkit-box-flex: 1;
+  box-sizing: border-box;
   -ms-flex-positive: 1;
   flex-grow: 1;
   width: 100%;
+}
+
+.outer {
+  padding-left: $container-padding;
+  padding-right: $container-padding;
+}
+
+.inner {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: $container;
+}
+
+.inner-md {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: $container-md;
+}
+
+.inner-sm {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: $container-sm;
 }
