--- a/sass/main.scss.njk
+++ b/sass/main.scss.njk
@@ -1,38 +1,18 @@
-
-// Font.
-$font: (
-  primary: ("Lato", Helvetica, Arial, sans-serif),
-  monospace: (Monaco, courier, monospace)
-);
-
-// Palette.
-{% set palette = site.params.palettes[site.params.palette].sass %}
-$palette: (
-  primary:           #424b5f,
-  secondary:         #283040,
-  meta:              #67758d,
-  border:            #dee5ef,
-  bg:                #f7f9fb,
-  note:              #fcb41d,
-  important:         #fc381d,
-  accent:            {{ palette.accent1 }},
-  accent-alt:        {{ palette.accent2 }},
-);
-
 @import "imports/functions";
-
-@import "fontawesome.min.css";
-@import "brands.min.css";
-
+@import "imports/variables";
 @import "imports/reset";
 @import "imports/general";
+@import "imports/tables";
+@import "imports/forms";
+@import "imports/buttons";
 @import "imports/icons";
+@import "imports/helpers";
 @import "imports/animations";
 @import "imports/structure";
 @import "imports/header";
-@import "imports/posts-pages";
-//@import "imports/post-navigation";
+@import "imports/posts";
 @import "imports/docs";
 @import "imports/sections";
 @import "imports/footer";
+@import "imports/palettes";
 //@import "imports/prism";
